Test/refman/top-level-export.dfy.expect
top-level-export.dfy(7,0): Error: There is no point to an export declaration at the top level
1 parse errors detected in top-level-export.dfy
